Creación de datos con Firestore

--- a/tournaments/templates/base.html
+++ b/tournaments/templates/base.html
@@ -130,7 +130,7 @@
                 <li><a class="dropdown-item" href="/players"><i class="bi bi-card-list"></i> Listado</a></li>
                 <li><a class="dropdown-item" href="/ranges"><i class="bi bi-bar-chart-line-fill"></i> Rangos</a></li>
                 <li><a class="dropdown-item" href="/reports"><i class="bi bi-flag-fill"></i> Reportes</a></li>
-                <li><a class="dropdown-item" href=""><i class="bi bi-coin"></i> Puntaje</a></li>
+                <li><a class="dropdown-item" href="/points"><i class="bi bi-coin"></i> Puntaje</a></li>
               </ul>
             </li>
             <!-- <li class="nav-item dropdown"><a class="nav-link mx-2 active" href="/points"><i class="bi bi-coin"></i>
@@ -157,11 +157,11 @@
     </div>
     </div>
   </main>
-  <footer>
+  <!-- <footer>
     <div style="text-align: center; margin-top: 20px; margin-bottom: 20px;">
       <span>Desarrollado por PSP Desarrollo Web &reg;</span>
     </div>
-  </footer>
+  </footer> -->
 
 
 
