--- a/tournaments/templates/base.html
+++ b/tournaments/templates/base.html
@@ -12,6 +12,9 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+  <script type='text/javascript' src='https://www.gstatic.com/charts/loader.js'></script>
+ 
+
 
   <style>
     nav {
@@ -139,11 +142,11 @@
             <li class="nav-item dropdown flare">
               <a class="nav-link mx-2 dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
                 data-bs-toggle="dropdown" aria-expanded="false">
-                <i class="bi bi-person-circle"></i> Username
+                <i class="bi bi-person-circle"></i> {{ request.user.username }}
               </a>
               <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                <li><a class="dropdown-item" href="#">Mi cuenta</a></li>
-                <li><a class="dropdown-item" (click)="logout()">Cerrar sesión</a></li>
+                <!-- <li><a class="dropdown-item" href="#">Mi cuenta</a></li> -->
+                <li><a class="dropdown-item" href="{% url 'logoutAdmin' %}">Cerrar sesión</a></li>
               </ul>
             </li>
           </ul>
