--- a/tournaments/templates/baseClient.html
+++ b/tournaments/templates/baseClient.html
@@ -98,7 +98,7 @@
   <header>
     <nav class="navbar navbar-expand-lg p-0 m-0">
       <div class="container-fluid">
-        <a class="navbar-brand nav-text-icon" href="home-admin">
+        <a class="navbar-brand nav-text-icon" href="home-client">
           <img src="{% static "images/logoBlue.png" %}" alt="Logo" width="50px">
           <b>Battle Way Administración</b></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
@@ -112,8 +112,7 @@
                 Registrarse</a>
             </li>
             <li class="nav-item flare">
-              <a class="nav-link mx-2 active" href="#" id="navbarDropdownMenuLink" role="button"
-              aria-expanded="false">
+              <a class="nav-link mx-2 active" href="/accounts/login/?next=/home-admin" id="navbarDropdownMenuLink" role="button" aria-expanded="false">
                 <i class="bi bi-box-arrow-in-right"></i> Iniciar Sesión
               </a>
 
@@ -131,11 +130,9 @@
   </main>
   <footer>
     <div style="text-align: center; margin-top: 20px; margin-bottom: 20px;">
-      <span>Desarrollado por PSP Desarrollo Web &reg;</span>
+      <span>Desarrollado por PSP Innovations&reg;</span>
     </div>
   </footer>
-
-
 
   <!-- Bootstrap JavaScript Libraries -->
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
