--- a/tournaments/templates/games/index.html
+++ b/tournaments/templates/games/index.html
@@ -2,6 +2,73 @@
 {% block title %}Juegos disponibles{% endblock %}
 
 {% block container %}
+<style>
+    .custom-modal .modal-content {
+        background-color: #2197f2;
+    }
+
+    .game-name {
+        font-size: 40px;
+        text-align: center;
+        font-weight: bold;
+        color: white;
+        white-space: nowrap;
+        overflow: hidden;
+        text-overflow: ellipsis; 
+    }
+
+    .company-name {
+        background-color: #f54336;
+        box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.5); 
+        color: white;
+        font-weight: bold;
+        padding: 5px 10px;
+        border-radius: 30px;
+        position: absolute;
+        bottom: 0;
+        right: 0;
+        margin: -7px;
+        z-index: 1;
+    }
+
+    .modal-body .modal-image-container {
+        position: relative;
+        width: 50%;
+        float: left;
+    }
+
+    .modal-body .modal-image-container img {
+        width: 100%;
+        height: auto;
+        border-radius: 10px; /* Esquinas redondeadas */
+    }
+
+    .modal-body .modal-details {
+        width: 50%;
+        float: left;
+        padding-left: 20px;
+    }
+
+    .social-icons {
+        text-align: center;
+        margin-top: 10px;
+    }
+
+    .social-icons i {
+        margin: 0 5px;
+        color: white;
+        transition: color 0.3s;
+    }
+
+    .social-icons i:hover {
+        color: #f3867f; 
+    }
+
+    .social-text {
+        text-align: center;
+        margin-bottom: 5px;
+    }
+</style>
 <h2 class="text-center mt-4 mb-4">Juegos Disponibles</h2>
 
 <div class="row justify-content-center">
@@ -9,13 +76,44 @@
     {% if data.status == 1 %}
     <div class="col-md-4 mb-4">
         <div class="card">
-            <img class="card-img-top" src="{{ data.image.url }}" alt="{{ data.name }}" style=" height: 220px;">
+            <img class="card-img-top" src="{{ data.image.url }}" alt="{{ data.name }}" style="height: 220px;">
             <div class="card-body">
                 <h5 class="card-title">{{ data.name }}</h5>
                 <p class="card-text">{{ data.details }}</p>
                 <div class="d-flex justify-content-between align-items-center">
                     <small class="text-muted">{{ data.company }}</small>
-                    <button type="button" class="btn btn-sm" style=" background-color: #f54336;">Más información <i class="bi bi-chevron-right"></i></button>
+                    <a href="#infoGame-{{ data.id }}" class="btn btn-sm" style="background-color: #f54336;"
+                        data-bs-toggle="modal">
+                        Más información <i class="bi bi-chevron-right"></i>
+                    </a>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- Modal para cada juego -->
+    <div class="modal fade custom-modal" id="infoGame-{{ data.id }}" tabindex="-1"
+        aria-labelledby="editTournamentModalLabel-{{ data.id }}" aria-hidden="true">
+        <div class="modal-dialog modal-lg">
+            <div class="modal-content">
+                <div class="modal-body">
+                    <div class="row align-items-center"> <!-- Alineación vertical de los elementos -->
+                        <div class="modal-image-container">
+                            <img src="{{ data.image.url }}" alt="{{ data.name }}" class="img-fluid">
+                            <div class="company-name">{{ data.company }}</div> <!-- Nombre de la compañía -->
+                        </div>
+                        <div class="modal-details">
+                            <div class="game-name">{{ data.name }}</div> <!-- Nombre del juego -->
+                            <p class="text-center">{{ data.details }}</p>
+                            <p class="social-text"><b>Redes sociales</b></p>
+                            <div class="social-icons">
+                                <a href=""><i class="bi bi-facebook"></i></a>
+                                <a href=""><i class="bi bi-youtube"></i></a>
+                                <a href=""><i class="bi bi-instagram"></i></a>
+                                <a href=""><i class="bi bi-globe2"></i></a>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
