--- a/tournaments/templates/registration/login.html
+++ b/tournaments/templates/registration/login.html
@@ -15,20 +15,20 @@
         <h5 class="card-title text-center">Iniciar Sesión</h5>
     </div>
     <div class="card-body">
-        <form>
+        <form method="post">
+            {% csrf_token %}
             <div class="form-group">
                 <label for="nombre"><i class="bi bi-person"></i> Correo Electrónico:</label>
-                <input type="text" class="form-control" id="email" name="email" [(ngModel)]="loginUser.email">
+                <input type="text" class="form-control" id="username" name="username">
             </div>
             <br>
             <div class="form-group">
                 <label for="contrasena"><i class="bi bi-shield-lock"></i> Contraseña:</label>
-                <input type="password" class="form-control" id="password" name="password"
-                    [(ngModel)]="loginUser.password">
+                <input type="password" class="form-control" id="password" name="password">
             </div>
             <br>
-            <div class="d-flex justify-content-center">
-                <button type="button" class="btn btn-danger" (click)="login(loginUser)">Ingresar a Battle Way</button>
+            <div class="d-flex justify-content-center mb-2">
+                <button type="submit" class="btn btn-danger">Ingresar a Battle Way</button>
             </div>
             <div class="d-flex justify-content-center">
                 <div class="buttons-container">
