--- a/tournaments/templates/tournaments/form.html
+++ b/tournaments/templates/tournaments/form.html
@@ -5,35 +5,48 @@
             <div class="row">
                 {% csrf_token %}
                 {% for campo in formTournament %}
-                {% if campo.label == "Nombre" %}
+                {% if campo.label == "Juego" %}
+                <div class="col-md-3 mb-3">
+                    <label for="{{ campo.name }}" class="form-label">{{ campo.label }}</label>
+                    <select class="form-select" id="{{ campo.name }}" name="{{ campo.name }}">
+                        {% for game in games %}
+                        <option value="{{ game.id }}">{{ game.name }}</option>
+                        {% endfor %}
+                    </select>
+                </div>
+                {% elif campo.label == "Nombre" %}
                 <div class="col-md-5 mb-3">
                     <label for="{{ campo.name }}" class="form-label">{{ campo.label }}</label>
                     <input type="text" class="form-control" id="{{ campo.name }}" name="{{ campo.name }}"
-                        placeholder="{{ campo.label }}" value="{{ campo.value | default:'' }}" >
+                        placeholder="{{ campo.label }}" value="{{ campo.value | default:'' }}">
                 </div>
                 {% elif campo.label == "Estado" %}
                 <div class="col-md-4 mb-3">
                     <label for="{{ campo.name }}" class="form-label">{{ campo.label }}</label>
                     <select class="form-select" id="{{ campo.name }}" name="{{ campo.name }}">
                         {% for value, label in campo.field.choices %}
-                            <option value="{{ value }}">{{ label }}</option>
+                        <option value="{{ value }}">{{ label }}</option>
                         {% endfor %}
                     </select>
                 </div>
-                {% elif campo.label == "Juego" %}
+                {% elif campo.label == "Fecha" %}
                 <div class="col-md-3 mb-3">
                     <label for="{{ campo.name }}" class="form-label">{{ campo.label }}</label>
-                    <select class="form-select" id="{{ campo.name }}" name="{{ campo.name }}" >
-                        {% for game in games %}
-                        <option value="{{ game.id }}">{{ game.name }}</option>
-                        {% endfor %}
-                    </select>
+                    <input type="date" class="form-control" id="{{ campo.name }}" name="{{ campo.name }}"
+                        placeholder="{{ campo.label }}" value="{{ campo.value|date:'Y-m-d' }}">
                 </div>
-                {% elif campo.label == "Fecha" or campo.label == "Hora" or campo.label == "Participantes" or campo.label == "Puntaje" %}
+                {% elif campo.label == "Hora" %}
+                <div class="col-md-3 mb-3">
+                    <label for="{{ campo.name }}" class="form-label">{{ campo.label }}</label>
+                    <input type="time" class="form-control" id="{{ campo.name }}" name="{{ campo.name }}"
+                        placeholder="{{ campo.label }}" value="{{ campo.value|date:'H:i' }}">
+                </div>
+
+                {% elif campo.label == "N° participantes" or campo.label == "Puntaje" %}
                 <div class="col-md-3 mb-3">
                     <label for="{{ campo.name }}" class="form-label">{{ campo.label }}</label>
                     <input type="text" class="form-control" id="{{ campo.name }}" name="{{ campo.name }}"
-                        placeholder="{{ campo.label }}" value="{{ campo.value | default:'' }}" >
+                        placeholder="{{ campo.label }}" value="{{ campo.value | default:'' }}">
                 </div>
                 {% elif campo.label == "Reglamento" %}
                 <div class="col-md-12 mb-3">
@@ -46,7 +59,7 @@
                 <div class="col-md-6 mb-3">
                     <label for="{{ campo.name }}" class="form-label">{{ campo.label }}</label>
                     <input type="text" class="form-control" id="{{ campo.name }}" name="{{ campo.name }}"
-                        placeholder="{{ campo.label }}" value="{{ campo.value | default:'' }}" >
+                        placeholder="{{ campo.label }}" value="{{ campo.value | default:'' }}">
                 </div>
                 {% elif campo.label == "Imagen" %}
                 <div class="col-md-6 mb-3">
@@ -55,7 +68,7 @@
                     <img src="{{ campo.value.url }}" alt="{{ campo.label }}" width="50px">
                     {% endif %}
                     <input type="{{ campo.field.widget.input_type }}" class="form-control" id="" name="{{ campo.name }}"
-                        placeholder="{{ campo.label }}" value="{{ campo.value | default:'' }}" >
+                        placeholder="{{ campo.label }}" value="{{ campo.value | default:'' }}">
                 </div>
                 {% endif %}
                 {% endfor %}
