--- a/tournaments/templates/registration/login.html
+++ b/tournaments/templates/registration/login.html
@@ -18,7 +18,7 @@
         <form method="post">
             {% csrf_token %}
             <div class="form-group">
-                <label for="nombre"><i class="bi bi-person"></i> Correo Electrónico:</label>
+                <label for="nombre"><i class="bi bi-person"></i> Nombre de usuario:</label>
                 <input type="text" class="form-control" id="username" name="username">
             </div>
             <br>
