--- a/tournaments/templates/home/home-client.html
+++ b/tournaments/templates/home/home-client.html
@@ -2,5 +2,78 @@
 {% block title %}Administración{% endblock %}
 
 {% block container %}
-<h2>Bienvenido</h2>
-{% endblock %}
+<style>
+    .icon-container {
+        display: flex;
+        justify-content: center;
+        /* Alineación horizontal en el centro */
+        align-items: center;
+        /* Alineación vertical en el centro */
+    }
+
+    .container {
+        position: relative;
+        z-index: 1;
+    }
+
+    /* .video-container {
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        overflow: hidden;
+        z-index: -1;
+        opacity: 50%;
+    } */
+
+    /* #background-video {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+    } */
+</style>
+<div class="container">
+    <br><br>
+    <header class="jumbotron jumbotron-fluid text-center bg-dark text-white">
+        <div class="container">
+            <h1 class="display-4 neon-text-green">¡Bienvenido a Battle Way!</h1>
+            <p class="lead">La plataforma de juegos competitivos y estratégicos</p>
+            <button class="btn btn-lg neon-btn" routerLink="/download">Descarga Battle Way</button>
+        </div>
+    </header>
+
+    <section class="features bg-dark text-white py-5">
+        <div class="container">
+            <!-- <div class="video-container">
+          <video autoplay muted loop id="background-video">
+            <source src="assets/video/COD01.mp4" type="video/mp4">
+            Tu navegador no admite la reproducción de video.
+          </video>
+        </div> -->
+            <div class="row">
+                <div class="col-md-4">
+                    <i class="bi bi-trophy-fill icon neon-icon-red icon-container"></i>
+                    <h3 class="neon-text-red text-center">Torneos estratégicos</h3>
+                    <p class="text-center">Demuestra tus habilidades en desafiantes torneos estratégicos contra otros
+                        jugadores.
+                    </p>
+                </div>
+                <div class="col-md-4">
+                    <i class="bi bi-people-fill icon neon-icon-cyan icon-container"></i>
+                    <h3 class="neon-text-cyan" style="text-align: center;">Comunidad vibrante</h3>
+                    <p style="text-align: center;">Forma clanes, intercambia estrategias y únete a una comunidad global
+                        de
+                        jugadores apasionados.</p>
+                </div>
+                <div class="col-md-4">
+                    <i class="bi bi-award-fill icon neon-icon-yellow icon-container"></i>
+                    <h3 class="neon-text-yellow" style="text-align: center;">Personalización y logros</h3>
+                    <p style="text-align: center;">Personaliza tu perfil, desbloquea logros y obtén recompensas
+                        exclusivas.</p>
+                </div>
+            </div>
+        </div>{% endblock %}
